Bump deps and plugins, and bump Java version to 17 (following Error Prone).
(Also, use a Temurin JDK instead of Zulu: Per [advice](https://github.com/google/guava/issues/7492#issuecomment-2439753364) from @ben-manes, LTS versions of Temurin [come pre-installed](https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Hosted-Tool-Cache). Compare https://github.com/google/guava/pull/7591.)

We should really migrate all the way off `oss-parent`, as we've done for other projects. I don't know if an actual release would work now or not.

Fixes https://github.com/google/guava-beta-checker/pull/39

RELNOTES=The Guava Beta Checker now requires Java 17 to run (like Error Prone). Like Error Prone, it can still be used when targeting older Java versions (by passing `-source 8 -target 8`, for example).
PiperOrigin-RevId: 746486321